Ändrat bild, fixat overflow max hidden på text.

--- a/Mapp/site/css/main.css
+++ b/Mapp/site/css/main.css
@@ -33,6 +33,7 @@ nav{
   margin-right: 10px;
   justify-content: center;
   align-items: center;
+  box-shadow: 0px 5px 5px #000; 
 }
 
 .vad{
@@ -49,7 +50,8 @@ nav{
   background-color:;white; 
   margin: 4px; 
   padding: 0px;
-
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .header{
@@ -58,9 +60,13 @@ nav{
 }
 
 .astley{
-  background-color: #0977EA;
   display: flex;
   flex-direction: column;
   width: 25%;
-  height: 75%; 
+  height: 75%;
+  box-shadow: 0px 5px 5px #000;
+  background-image: url(../img/Rick_Astley.jpg); 
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
+
